--- a/manuals/rqs/read.html
+++ b/manuals/rqs/read.html
@@ -87,7 +87,11 @@
                model: {
                   key: 'rqs-read',
                   title: '閱讀模式',
-                  summary: '閱讀歷屆考古題與試題解析',
+                  summary: `<ul class="article-imgDesc" >
+                                    <li>
+                                       閱讀歷屆考古題與試題解析
+                                    </li>
+                   </ul>`,
                   features: [],
                   content: `<p>
                                  <img src="./images/rqs-read.png" />
